k8s/vision_worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vision-worker
  namespace: aapt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vision-worker
  template:
    metadata:
      labels:
        app: vision-worker
    spec:
      containers:
        - name: vision-worker
          image: aapt/vision_worker:latest
          imagePullPolicy: IfNotPresent
