k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: aapt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.9-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: definitions
              mountPath: /etc/rabbitmq/definitions.json
              subPath: definitions.json
      volumes:
        - name: definitions
          configMap:
            name: rabbitmq-definitions
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: aapt
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
      type: NodePort
